--- a/jiaoxiaojie/1-5响应.css
+++ b/jiaoxiaojie/1-5响应.css
@@ -4,19 +4,19 @@
 }
 
 body {
-    background-color: #F8F9FA;
+    background-color: #F8F9FB;
 }
-
-nav {
+.na {
     width: 100%;
     height: 80px;
     background-color: #FFFFFF;
     margin-top: 25px;
     margin-bottom: 18px;
+    margin: auto;
     box-shadow: 2px 3px #F8F9FB;
 }
 
-nav ul {
+.na ul {
     width: 260px;
     height: 50px;
     margin-left: 26%;
@@ -24,7 +24,7 @@ nav ul {
 
 }
 
-nav ul li {
+.na ul li {
     list-style: none;
     margin-top: 15%;
     margin-right: 30px;
@@ -32,7 +32,7 @@ nav ul li {
     float: left;
 }
 
-nav ul li a {
+.na ul li a {
     text-decoration: none;
     font-size: large;
 }
@@ -46,7 +46,7 @@ nav ul li a {
     border-radius: 10px;
 }
 
-nav ul li a:hover {
+.na ul li a:hover {
     color: #007bff;
 }
 
@@ -103,7 +103,7 @@ nav ul li a:hover {
 }
 
 .in2 {
-    width: 330px;
+    
     height: 40px;
     float: left;
 
@@ -156,8 +156,27 @@ nav ul li a:hover {
 }
 
 .ifo2 {
-    width: 90px;
+     /* width: 90px; */
     height: 30px;
     float: right;
     margin-top: 10px;
+}
+
+
+
+
+@media only screen and (max-width: 786px) {
+    /* For tablets: */
+    .col-m-12 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
 }
