--- a/jiaoxiaojie/bs/index.css
+++ b/jiaoxiaojie/bs/index.css
@@ -12,10 +12,12 @@ body{
     margin-top: 40px;
 }
 .fen{
-   width: 300px;
-   height: 190px;
+   
     background-image: url(images/index/lan.png);
 }
+
+
+
 .fen:hover{
     background-image: url(images/index/lan1.png); 
 }
@@ -23,8 +25,7 @@ body{
 
 
 .fen1{
-    width: 100%;
-    height: auto;
+    
     background-image: url(images/index/renzheng.png);
 }
 .fen1:hover{
@@ -34,8 +35,7 @@ body{
 
 
 .fen2{
-    width:100%;
-    height: auto;
+   
     background-image: url(images/index/cailiao.png);
 }
 .fen2:hover{
@@ -44,12 +44,17 @@ body{
 
 
 .fen3{
-     width: 300px;
-    height: 190px;
+     
     background-image: url(images/index/gao.png);
 }
 .fen3:hover{
     background-image: url(images/index/gao1.png); 
+}
+.pro-img{
+    width: 100%;
+   height: 190px;
+   background-repeat: no-repeat; 
+   background-position: center;
 }
 .ii1 img{
     float: left;
