完成了Blog页面，修改了一小动画，细节。

--- a/jiaoxiaojie/Dzen/css/Services.css
+++ b/jiaoxiaojie/Dzen/css/Services.css
@@ -160,7 +160,7 @@
     margin-bottom: 40px;
 }
 .righ{
-     border: 1px solid #e1e9e9;;
+     border: 1px solid #e1e9e9;
 }
 .right{
     margin-top: 40px;
