--- a/jiaoxiaojie/Dzen/css/Features.css
+++ b/jiaoxiaojie/Dzen/css/Features.css
@@ -273,11 +273,7 @@
 
 
 
-/* .tags1{
-    padding-top: 25px;
-    padding-bottom: 25px;
-    font-size: 25px;
-} */
+
 
 
 
@@ -420,7 +416,7 @@
                           width: 100%;
                           height: 100%;
                           background: none;
-                          border-width: 2px;
+                          border-width: 10px;
                           border-style: solid;
                           position: absolute;
                           top: 0;
@@ -449,7 +445,6 @@
                           width: 85%;
                           height: 85%;
                           border-radius: 50%;
-                          border: 2px solid #ebebeb;
                           font-size: 32px;
                           line-height: 125px;
                           text-align: center;
@@ -643,4 +638,66 @@
      font-size: 20px;
      font-weight: 300;
  }
+ .panel-body{
+     display: none;
+ }
  
+ 
+ .panel-title a{
+     text-decoration: none;
+ }
+ .plus{
+     margin-top:0px;
+     float: right;
+ }
+ .minus{
+     float: right;
+     margin-top:0px;
+     display: none;
+ }
+ 
+ 
+ .por1{
+     animation: bar 5s;
+ }
+ @keyframes bar
+ {
+     from {width:0%;}
+     to {width: 80%;}
+ }
+ 
+ 
+ .por2{
+     animation: bar2 5s;
+ }
+ @keyframes bar2
+ {
+     from {width:0%;}
+     to {width: 90%;}
+ }
+ 
+ .por3{
+     animation: bar3 5s;
+ }
+ @keyframes bar3
+ {
+     from {width:0%;}
+     to {width: 68%;}
+ }
+ .por4{
+     animation: bar4 5s;
+ }
+ @keyframes bar4
+ {
+     from {width:0%;}
+     to {width: 100%;}
+ }
+ .por5{
+     animation: bar5 5s;
+ }
+ @keyframes bar5
+ {
+     from {width:0%;}
+     to {width: 100%;}
+ }
+  
