--- a/jiaoxiaojie/Dzen/css/index.css
+++ b/jiaoxiaojie/Dzen/css/index.css
@@ -2,9 +2,10 @@
     margin: 0px;
     padding: 0px;
 }
-
 #myCarousel{
     width: 100%;
+    max-height: 500px;
+    overflow: hidden;
 }
 .change{
     margin-top: 40px;
@@ -92,19 +93,109 @@ margin-right: 30px;
     width: 100%;
     height:auto;
    padding-bottom: 15px;
-  
+   
 }
 
 .photo img{
    width: 100%;
    height:auto;
 }
+
+.ide img{
+   width: 100%;
+   height:auto;
+   transition: all 1s ease;
+}
+.ui img{
+    width: 100%;
+    height:auto;
+    transition: all 1s ease;
+}
+.il img{
+    width: 100%;
+    height:auto;
+    transition: all 1s ease;
+}
+.br img{
+    width: 100%;
+    height:auto;
+    transition: all 1s ease;
+}
+
+
 .p1{
     padding:0px 0px 5px 8px;
+}
+.p1 a{
+    text-decoration: none;
+}
+.photo img:hover{
+    opacity:0.4;
+} 
+.ide img:hover{
+    opacity:0.4;
+}
+.ui img:hover{
+     opacity:0.4;
+}
+.il img:hover{
+     opacity:0.4;
+}
+.br img:hover{
+     opacity:0.4;
+}
+
+.ide{
+     width: 100%;
+     height:auto;
+    padding-bottom: 15px;
+    display: none;
+}
+.ui{
+    width: 100%;
+     height:auto;
+    padding-bottom: 15px;
+    display: none;
+    
+}
+
+.il{
+    width: 100%;
+     height:auto;
+    padding-bottom: 15px;
+    display: none;
+}
+
+.br{
+    width: 100%;
+     height:auto;
+    padding-bottom: 15px;
+    display: none;
 }
 
 
 
+
+
+.com{
+    text-align: center;
+    margin-top: 50px;
+}
+.com a{
+    display: inline-block;
+    text-decoration: none;
+    font-size: 16px;
+    color: #000000;
+    padding: 15px 25px 15px 25px;
+    border: 1px solid #EBEBEB;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.com a:hover{
+    background-color: #002752;
+    color: #FFFFFF;
+}
 .yan{
    background-color:#000000;
    height:auto;
@@ -116,7 +207,9 @@ margin-right: 30px;
     text-align: center;
     margin-top: 30px;
 }
-
+.ima{
+    transition: all 1s ease;
+}
 .people .ima:hover{
       opacity: 0.3;
 }
@@ -267,3 +360,67 @@ margin-right: 30px;
     line-height: 90px;
     margin-left: 40px;
 }
+.panel-body{
+    display: none;
+}
+
+
+.panel-title a{
+    text-decoration: none;
+}
+.plus{
+    margin-top:0px;
+    float: right;
+}
+.minus{
+    float: right;
+    margin-top:0px;
+    display: none;
+}
+
+
+
+.por1{
+    animation: bar 5s;
+}
+@keyframes bar
+{
+    from {width:0%;}
+    to {width: 80%;}
+}
+
+
+.por2{
+    animation: bar2 5s;
+}
+@keyframes bar2
+{
+    from {width:0%;}
+    to {width: 90%;}
+}
+
+.por3{
+    animation: bar3 5s;
+}
+@keyframes bar3
+{
+    from {width:0%;}
+    to {width: 68%;}
+}
+.por4{
+    animation: bar4 5s;
+}
+@keyframes bar4
+{
+    from {width:0%;}
+    to {width: 100%;}
+}
+.por5{
+    animation: bar5 5s;
+}
+@keyframes bar5
+{
+    from {width:0%;}
+    to {width: 100%;}
+}
+ 
