--- a/jiaoxiaojie/WinterZone/css/index.css
+++ b/jiaoxiaojie/WinterZone/css/index.css
@@ -41,6 +41,7 @@
 }
 .img{
     background-image: url(../images/hm8a9vdx.jpg);
+    background-size:100% 100%;
     width: 100%;
     height: 400px;
     overflow: hidden;
